--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-std = {version = "1.10.0", features = ["attributes"]}
+env_logger = "0.9.0"
+log = "0.4.14"
+futures = "0.3.19"
